@@ -1,3 +1,6 @@
+25/01/2003
+- now checks for vkeybd on startup and greys out menu item if not found :)
+
 20/01/2003
 - fixed bug in rc file parsing - failed on lines containing a single '#'
 - fixed midi controllers problem - using controllers on alsa midi driver would
